# py_backpack

./: .gitignore  README.md  README.rst  email.txt  pyproject.toml  setup.py
OLD/: arraymanip.py  calcmanip_old.py  commomModelFunctions.py  example_pyCalc.py  filemanip.py  fit_support.py
backpack/: arraymanip.py  calcmanip.py  datafit.py  figmanip.py  filemanip.py  interact.py  intermanip.py  libremanip.py  model_functions.py
docs/: .buildinfo  arraymanip.html  conf.py  figmanip.html  figmanip.rst  filemanip.html  genindex.html  index.html  index.rst  installation (copy).rst  installation.html  installation.rst  interact.html  interact.rst  intermanip.rst  libremanip.rst  model_functions.html  model_functions.rst  objects.inv  py-modindex.html  search.html  searchindex.js  tree.txt
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt
docs/_build/html/_static/: copybutton.js
docs/_sources/: index.rst.txt
docs/source/: filemanip.rst  installation.rst
docs/source/_build/doctrees/: arraymanip.doctree  environment.pickle  figmanip.doctree  filemanip.doctree  (+4 more)
manipUtils/: arraymanip.py  filemanip.py
manipUtils_old/: __init__.py  figmanip.py  genmanip.py
templates/: calc_manipulation.py  example.ods  figureSimple.py  figure_publication.py  fit_general.py
templates/Old/: figureSharedX.py  figureSimple.py  figureSimple_win.py
(+8 files in other folders)
