[metadata]
name = py-backpack
version = 0.0.1
author = Carlos Galdino
author_email = galdino@ifi.unicamp.br
description = This repository aims at providing useful modules and code snippets that I use almost everyday.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/cwgaldino/py-backpack
project_urls =
    Bug Tracker = https://github.com/cwgaldino/py-backpack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
